--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 
 #their-video {
   width: 100%;
-  height: 75%;
-  max-height: 480px;
+  height: 450px;
+  /*max-height: 480px;*/
   background-color: #eee;
 }
 
