--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
 
 #their-video {
   width: 100%;
-  height: 450px;
+  height: 450;
   /*max-height: 480px;*/
   background-color: #eee;
 }
